--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,9 @@
 
 <body>
-  <typography></typography>
+  <typography
+    title="bonescss demo"
+    subtitle="Sain defaults and helpers for pretty much everthing",
+    lead="this should help you to use the bonescss as a SASS/CSS toolkit for your project">
+  </typography>
   <script src="build.js"></script>
 </body>
