adds basic list demos

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,5 +5,6 @@
     subtitle="Sain defaults and helpers for pretty much everthing",
     lead="this should help you to use the bonescss as a SASS/CSS toolkit for your project">
   </typography>
+  <lists></lists>
   <script src="build.js"></script>
 </body>
