better demo settings

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,10 @@
-
+<!doctype html>
+<head>
+  <title>bonescss</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+</head>
 <body>
+  <pageheader></pageheader>
   <typography
     title="bonescss demo"
     subtitle="Sain defaults and helpers for pretty much everthing",
