--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,13 @@
 </head>
 <body>
   <pageheader></pageheader>
-  <typography
-    title="bonescss demo"
-    subtitle="Sain defaults and helpers for pretty much everthing",
-    lead="this should help you to use the bonescss as a SASS/CSS toolkit for your project">
-  </typography>
-  <lists></lists>
+  <div class="module-demos site-width">
+    <typography
+      title="bonescss demo"
+      subtitle="Sain defaults and helpers for pretty much everthing",
+      lead="this should help you to use the bonescss as a SASS/CSS toolkit for your project">
+    </typography>
+    <lists></lists>
+  </div>
   <script src="build.js"></script>
 </body>
