--- a/demo/index.html
+++ b/demo/index.html
@@ -6,12 +6,12 @@
 <body>
   <pageheader></pageheader>
   <div class="module-demos site-width">
-    <typography
-      title="bonescss demo"
-      subtitle="Sain defaults and helpers for pretty much everthing",
-      lead="this should help you to use the bonescss as a SASS/CSS toolkit for your project">
-    </typography>
-    <lists></lists>
+    <module
+      title="Layout"
+      subtitle="Helps you to layout stuff">
+      <p slot="description">some description</p>
+      <pre slot="code"></pre>
+    </module>
   </div>
   <script src="build.js"></script>
 </body>
