more modular demo setup

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,10 +8,18 @@
   <div class="module-demos site-width">
     <module
       title="Layout"
-      subtitle="Helps you to layout stuff">
+      subtitle="Helps you to layout stuff",
+      type="html">
+
       <p slot="description">some description</p>
-      <pre slot="code"></pre>
+      <div slot="demo">
+        the demo
+      </div>
+      <div slot="code">
+        <div>Some code</div>
+      </div>
     </module>
   </div>
+  <script scr="http://prismjs.com/prefixfree.min.js"></script>
   <script src="build.js"></script>
 </body>
