--- a/demo/index.html
+++ b/demo/index.html
@@ -20,18 +20,21 @@
       </p>
       <div slot="demo">
         <h3>Horizontal</h3>
+        <h4>@include horizontal; / .l-horizontal-list</h4>
         <ul class="l-horizontal-list demo__block">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
           <li class="demo__block">third</li>
         </ul>
         <h3>Horizontal samewidth</h3>
+        <h4>@include horizontal($type: samewidth); / .l-horizontal-samewidth</h4>
         <ul class="l-horizontal-samewidth-list demo__block" style="box-sizing: border-box">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
           <li class="demo__block">third</li>
         </ul>
         <h3>Horizontal equidistant</h3>
+        <h4>@include horizontal($type: equidistant); / .l-horizontal-equidistant</h4>
         <ul class="l-horizontal-equidistant demo__block" style="box-sizing: border-box">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
