--- a/demo/index.html
+++ b/demo/index.html
@@ -19,22 +19,24 @@
         inline (default), samewidth and equidistant
       </p>
       <div slot="demo">
-        <h3>Horizontal</h3>
-        <h4>@include horizontal; / .l-horizontal-list</h4>
-        <ul class="l-horizontal-list demo__block">
+        <h3 class="demo__title">Horizontal</h3>
+        <h4 class="demo__title-sub">@include horizontal; / .l-horizontal-list</h4>
+        <ul class="l-horizontal-list demo__block module__box">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
           <li class="demo__block">third</li>
         </ul>
-        <h3>Horizontal samewidth</h3>
-        <h4>@include horizontal($type: samewidth); / .l-horizontal-samewidth</h4>
+
+        <h3 class="demo__title">Horizontal samewidth</h3>
+        <h4 class="demo__title-sub">@include horizontal($type: samewidth); / .l-horizontal-samewidth</h4>
         <ul class="l-horizontal-samewidth-list demo__block" style="box-sizing: border-box">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
           <li class="demo__block">third</li>
         </ul>
-        <h3>Horizontal equidistant</h3>
-        <h4>@include horizontal($type: equidistant); / .l-horizontal-equidistant</h4>
+
+        <h3 class="demo__title">Horizontal equidistant</h3>
+        <h4 class="demo__title-sub">@include horizontal($type: equidistant); / .l-horizontal-equidistant</h4>
         <ul class="l-horizontal-equidistant demo__block" style="box-sizing: border-box">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
