finishes first module demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,10 +18,11 @@
         specified using the $childSelector argument. The different flavors are;
         inline (default), samewidth and equidistant
       </p>
+
       <div slot="demo">
         <h3 class="demo__title">Horizontal</h3>
         <h4 class="demo__title-sub">@include horizontal; / .l-horizontal-list</h4>
-        <ul class="l-horizontal-list demo__block module__box">
+        <ul class="l-horizontal-list demo__block">
           <li class="demo__block">first</li>
           <li class="demo__block">second</li>
           <li class="demo__block">third</li>
