adds grunt for static build of the demo

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -111,5 +111,5 @@ $types: (
 }</code>
     </module>
   </div>
-  <script src="build/demo/build.js"></script>
+  <script src="build.js"></script>
 </body>
